--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "mapbox-gl": "^2.15.0",
+    "ng-recaptcha": "^13.2.1",
+    "ngx-mapbox-gl": "^10.0.0",
     "notiflix": "^3.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
